# minizord

./: .env.example  .gitignore  Cargo.toml  README.md  compose.yml  dev.compose.yml  justfile  package.json  shell.nix
.cargo/: config.toml
apps/backend/bootstrap/monolyth/: Cargo.toml
apps/backend/bootstrap/monolyth/src/: lib.rs
apps/backend/bootstrap/monolyth/src/bootstrappers/: rest_api.rs
apps/backend/bootstrap/monolyth/src/modules/: mod.rs  repositories.rs  services.rs
apps/backend/domain/: Cargo.toml
apps/backend/domain/src/: lib.rs
apps/backend/domain/src/profile/: bio.rs  city.rs  mod.rs  name.rs  portfolio_url.rs  surname.rs  telegram.rs
apps/backend/domain/src/session/: access_token.rs  mod.rs  refresh_token.rs
apps/backend/domain/src/user/: email.rs  mod.rs  password.rs  role.rs  username.rs
apps/backend/domain/src/validation/: constraints.rs  mod.rs  regex.rs
apps/backend/domain/src/validation/constraints/: password.rs
apps/backend/infrastructure/persistence/: Cargo.toml
apps/backend/infrastructure/persistence/postgres/: Cargo.toml
apps/backend/infrastructure/persistence/redis/: Cargo.toml
apps/backend/infrastructure/persistence/src/: lib.rs
apps/backend/infrastructure/persistence/surreal/: Cargo.toml  build.rs
apps/backend/infrastructure/persistence/surreal/db/: .surrealdb.toml
apps/backend/infrastructure/persistence/surreal/src/: error.rs  lib.rs
apps/backend/infrastructure/services/: Cargo.toml
apps/backend/infrastructure/services/hasher/: Cargo.toml
apps/backend/infrastructure/services/hasher/argon2/: Cargo.toml
apps/backend/infrastructure/services/token/: Cargo.toml
apps/backend/infrastructure/services/token/jwt/: Cargo.toml
apps/backend/presentation/: Cargo.toml
apps/backend/presentation/api/: Cargo.toml
apps/backend/presentation/api/rest/: Cargo.toml  build.rs
apps/backend/presentation/bot/: Cargo.toml
apps/backend/presentation/bot/telegram/: Cargo.toml
backend/: .dockerignore  .env  .surrealdb  .wakatime  Cargo.toml  Dockerfile  compose.yml  dev-compose.yml  rustfmt.toml  watch-rust.sh  watch-surreal.sh  watch.sh
backend/.cargo/: audit.toml
backend/assets/: prometheus.yml
backend/crates/api/: .surrealdb  Cargo.toml  watch-surreal.sh
backend/crates/api/dto/: Cargo.toml
backend/crates/api/dto/src/: auth.rs  image.rs  lib.rs  mentor.rs  organizator.rs  participant.rs  profile.rs  review.rs  team.rs  tour.rs  user.rs
backend/crates/api/entity/: Cargo.toml
backend/crates/api/entity/src/: applied_to_join.rs  has_experience_as.rs  image.rs  knows.rs  lib.rs  member_of.rs  mentors.rs  participated_in.rs  profile.rs  reviewed.rs  specialization.rs  team.rs  technology.rs  tour.rs  user.rs  uses.rs
backend/crates/api/handler/: Cargo.toml  build.rs
backend/crates/api/handler/src/: lib.rs
backend/crates/api/handler/src/common/: mod.rs  validation.rs  wrapper.rs
backend/crates/api/handler/src/health/: implementation.rs  mod.rs
backend/crates/api/handler/src/info/: implementation.rs  mod.rs
backend/crates/api/handler/src/mentor/: implementation.rs  mod.rs
backend/crates/api/handler/src/organizator/: implementation.rs  mod.rs
backend/crates/api/handler/src/participant/: implementation.rs  mod.rs
backend/crates/api/handler/src/profile/: implementation.rs  mod.rs
backend/crates/api/handler/src/review/: implementation.rs  mod.rs
backend/crates/api/handler/src/user/: implementation.rs  mod.rs
backend/crates/api/repository/: Cargo.toml
backend/crates/api/repository/src/: lib.rs
backend/crates/api/repository/src/applied_to_join/: mod.rs  surreal.rs
backend/crates/api/repository/src/common/: error.rs  mod.rs
backend/crates/api/repository/src/has_experience_as/: mod.rs  surreal.rs
backend/crates/api/repository/src/image/: mod.rs  s3.rs
backend/crates/api/service/: Cargo.toml
backend/crates/api/service/src/: lib.rs
backend/crates/api/src/: gen_openapi.rs  lib.rs  main.rs
backend/crates/api/src/utils/: cors.rs  lgtm.rs  logger.rs  mod.rs  openapi.rs  validation.rs
backend/crates/app/: Cargo.toml
backend/crates/dto/: Cargo.toml
backend/crates/dto/src/: lib.rs  organizator.rs
backend/crates/handler/: Cargo.toml
backend/crates/handler/src/common/: auth.rs  error.rs  mod.rs
backend/crates/handler/src/organizator/: implementation.rs  mod.rs
backend/crates/macros/: Cargo.toml
backend/crates/macros/src/: auth.rs  cases.rs  dto.rs  entity.rs  handler.rs  implementation.rs  lib.rs  metrics.rs  repository.rs  reqresp.rs  service.rs  surql_query.rs
backend/crates/macros/src/impls/: mod.rs
backend/crates/mail/: Cargo.toml
backend/crates/repository/: Cargo.toml
backend/crates/repository/src/common/: mod.rs
backend/crates/repository/src/organizator/: mod.rs  surreal.rs
backend/crates/service/: Cargo.toml
backend/crates/service/src/common/: error.rs  mod.rs
backend/crates/service/src/organizator/: implementation.rs  mod.rs
backend/crates/telegram/: Cargo.toml
backend/crates/testing/api/: Cargo.toml
backend/crates/testing/handler/: Cargo.toml
backend/crates/testing/mail/: Cargo.toml
backend/crates/testing/repository/: Cargo.toml
backend/crates/testing/service/: Cargo.toml
backend/crates/testing/telegram/: Cargo.toml
backend/crates/utils/: Cargo.toml
backend/crates/utils/macros/: Cargo.toml
backend/crates/utils/macros/proc/: Cargo.toml
backend/crates/utils/macros/src/: lib.rs  metrics.rs
backend/crates/utils/src/: lgtm.rs  lib.rs  logger.rs
backend/crates/utils/src/adapters/: mobc.rs  mod.rs  s3.rs  surreal.rs  surrealdb.rs
backend/crates/utils/src/auth/: jwt.rs  mod.rs  password_hashing.rs
backend/crates/utils/src/lgtm/: actix_web_specific.rs  mod.rs
backend/crates/utils/src/logger/: mod.rs
backend/crates/utils/src/validation/: mod.rs  password.rs  portfolio_urls.rs  regex.rs
backend/mail/: Dockerfile  build.gradle.kts  settings.gradle.kts
backend/mail/config/detekt/: detekt.yml
backend/mail/src/main/proto/: email.proto
backend/mail/src/main/resources/: application-dev.yml  application-prod.yml  application.yml
(+228 files in other folders)
