[workspace]
resolver = "2"
members = [
    "crates/macros",
    "crates/utils",
    "crates/api*",
    "crates/mail*",
    "crates/telegram*",
]

[workspace.package]
license = "MIT"
edition = "2024"

[workspace.dependencies]
macros = { path = "./crates/macros" }
utils = { path = "./crates/utils" }
dto = { path = "./crates/api/dto" }

env-vars-config = "0.3"

log = "0.4"
tracing = "0.1"
thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"

validator = { version = "0.20", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1.2", features = ["serde"] }

bytes = { version = "1.10", features = ["serde"] }

tokio = { version = "1.44", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "fs",
] }

surrealdb = "2.2"

aws-sdk-s3 = { version = "1.82", features = ["behavior-version-latest"] }

tonic = { version = "0.12", default-features = false, features = ["channel", "codegen", "prost"] }

utoipa = { version = "5.3", features = [
    "actix_extras",
    "chrono",
    "ulid",
    "preserve_order",
    "preserve_path_order",
    "non_strict_integers",
] }

actix-web = "4.10"
actix-web-lab = "0.24"
actix-web-validation = { version = "0.8", features = ["validator"] }
actix-multipart = "0.7"
utoipa-actix-web = "0.1"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
