[workspace]
resolver = "2"
members = [
    "crates/macros",
    "crates/utils",
    "crates/api*",
    "crates/mail*",
    "crates/telegram*",
]

[workspace.package]
license = "MIT"
edition = "2024"

[workspace.dependencies]
macros = { path = "./crates/macros" }
utils = { path = "./crates/utils" }

env-vars-config = "0.5"

thiserror = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.27"
strum_macros = "0.27"

garde = { version = "0.22", features = ["derive", "serde", "url", "email", "email-idna", "regex"] }

chrono = { version = "0.4", features = ["serde"] }
ulid = { version = "1.2", features = ["serde"] }

bytes = { version = "1.10", features = ["serde"] }

tokio = { version = "1.44", features = [
    "rt-multi-thread",
    "macros",
    "io-util",
    "fs",
] }

surrealdb = "2.2"
include_dir = "0.7"

aws-sdk-s3 = { version = "1.82", features = ["behavior-version-latest"] }

# tonic = { version = "0.12", default-features = false, features = ["channel", "codegen", "prost", "zstd"] }

opentelemetry = { version = "0.29", features = ["trace", "logs", "metrics"] }
tracing = "0.1"
metrics = "0.24"

utoipa = { version = "5.3", features = [
    "actix_extras",
    "chrono",
    "ulid",
    "preserve_order",
    "preserve_path_order",
    "non_strict_integers",
    "url",
] }

actix-web = "4.10"
actix-web-lab = "0.24"
actix-web-validation = { version = "0.8", features = ["garde"] }
actix-multipart = "0.7"
utoipa-actix-web = "0.1"

# Builds

# Tests
rstest = "0.25"
# bon = "3.6"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

# Arithmetic
[workspace.lints.rust]
arithmetic_overflow = "deny"  # Prevent operations that would cause integer overflow

[workspace.lints.clippy]
checked_conversions = "deny"          # Suggest using checked conversions between numeric types
cast_possible_truncation = "deny"     # Detect when casting might truncate a value
cast_sign_loss = "deny"               # Detect when casting might lose sign information
cast_possible_wrap = "deny"           # Detect when casting might cause value to wrap around
cast_precision_loss = "deny"          # Detect when casting might lose precision
integer_division = "deny"             # Highlight potential bugs from integer division truncation
arithmetic_side_effects = "deny"      # Detect arithmetic operations with potential side effects
unchecked_duration_subtraction = "deny" # Ensure duration subtraction won't cause underflow

# Unwraps
unwrap_used = "deny"                  # Discourage using .unwrap() which can cause panics
panicking_unwrap = "deny"             # Prevent unwrap on values known to cause panics
option_env_unwrap = "deny"            # Prevent unwrapping environment variables which might be absent

# Array indexing
indexing_slicing = "deny"             # Avoid direct array indexing and use safer methods like .get()

# Path handling
join_absolute_paths = "deny"          # Prevent issues when joining paths with absolute paths

# Serialization issues
serde_api_misuse = "deny"             # Prevent incorrect usage of Serde's serialization/deserialization API

# Unbounded input
uninit_vec = "deny"                   # Prevent creating uninitialized vectors which is unsafe

# Unsafe code detection
transmute_int_to_char = "deny"        # Prevent unsafe transmutation from integers to characters
transmute_int_to_float = "deny"       # Prevent unsafe transmutation from integers to floats
transmute_ptr_to_ref = "deny"         # Prevent unsafe transmutation from pointers to references
transmute_undefined_repr = "deny"     # Detect transmutes with potentially undefined representations
