[package]
name = "minizord-presentation"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
api = ["dep:api"]
api-rest = ["api", "api/rest"]

bot = ["dep:bot"]

[dependencies]
api = { path = "./api", package = "minizord-presentation-api", optional = true }
bot = { path = "./bot", package = "minizord-presentation-bot", optional = true }

[lints]
workspace = true
