[package]
name = "api"
description = "OpenAPI for the Megazord platform"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

default-run = "api"

[[bin]]
name = "gen-openapi"
path = "./src/gen_openapi.rs"


[features]
default = ["scalar"]
scalar = ["utoipa-scalar"]
swagger = ["utoipa-swagger-ui"]

[dependencies]
env-vars-config.workspace = true
utils = { workspace = true, features = ["actix-web"] }

repository = { path = "./repository" }
service = { path = "./service" }
handler = { path = "./handler" }

log.workspace = true

validator.workspace = true

# tonic.workspace = true

tracing.workspace = true

utoipa.workspace = true
utoipa-scalar = { version = "0.3", features = ["actix-web"], optional = true }
utoipa-swagger-ui = { version = "9.0", features = [
    "actix-web",
    "vendored",
], optional = true }

actix-web.workspace = true
actix-rt = "2.10"
actix-cors = "0.7"
# actix-files = "0.6"
actix-web-lab.workspace = true
actix-web-validation.workspace = true
utoipa-actix-web.workspace = true
