[package]
name = "api"
description = "API for the Minizord platform"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

default-run = "minizord-api"

[lib]
name = "api"
path = "./src/lib.rs"

[[bin]]
name = "minizord-api"
path = "./src/main.rs"

[[bin]]
name = "gen-openapi"
path = "./src/gen_openapi.rs"

[features]
default = ["scalar"]
scalar = ["utoipa-scalar"]
swagger = ["utoipa-swagger-ui"]

[dependencies]
env-vars-config.workspace = true
utils = { workspace = true, features = ["actix-web"] }

api-repository = { path = "./repository" }
api-service = { path = "./service", features = ["surrealdb", "s3"] }
api-handler = { path = "./handler", features = ["actix-web"] }

# log.workspace = true

garde.workspace = true

# tonic.workspace = true

opentelemetry.workspace = true
tracing.workspace = true

utoipa.workspace = true
utoipa-scalar = { version = "0.3", features = ["actix-web"], optional = true }
utoipa-swagger-ui = { version = "9.0", features = [
    "actix-web",
    "vendored",
], optional = true }

actix-web.workspace = true
actix-rt = "2.10"
actix-cors = "0.7"
# actix-files = "0.6"
actix-web-lab.workspace = true
actix-web-validation.workspace = true
utoipa-actix-web.workspace = true

[lints]
workspace = true

