[package]
name = "handler"
version = "0.1.0"
edition = "2024"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]

[dependencies]
macros.workspace = true
dto.workspace = true

service.path = "../service"

async-trait.workspace = true
paste.workspace = true

thiserror.workspace = true

serde.workspace = true
validator.workspace = true

utoipa.workspace = true
utoipa-actix-web.workspace = true

actix-web = "4.9"
actix-web-lab = "0.23"
