[package]
name = "macros"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[features]
surrealdb = ["dep:surrealdb"]
actix-web = []

[dependencies]
async-trait = "0.1"
pastey = "0.1"

surrealdb = { workspace = true, optional = true }
