[package]
name = "utils"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[features]
surrealdb = ["dep:surrealdb", "dep:surrealdb-migrations", "dep:include_dir"]
s3 = ["dep:aws-sdk-s3"]
actix-web = [
    "dep:actix-web", 
    "dep:actix-contrib-logger", 
    "dep:tracing-actix-web", 
    "dep:actix-web-prom"
]

[dependencies]
log.workspace = true

lazy_static = "1.4"

serde.workspace = true

garde.workspace = true
passwords = "3.1"
regex = "1.10"
url = "2.5"

chrono = { version = "0.4", features = ["serde"] }
ulid.workspace = true

argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
rand_chacha = "0.3"
jsonwebtoken = "9.3"

tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
    "registry",
    "std",
] }
tracing-opentelemetry = "0.30"
opentelemetry-appender-tracing = "0.29"
opentelemetry_sdk = { version = "0.29", features = [
    "rt-tokio",
    "trace",
    "logs",
] }
opentelemetry-otlp = { version = "0.29", features = [
    "grpc-tonic",
    "trace",
    "logs",
] }
opentelemetry = { version = "0.29", features = ["trace", "logs"] }
# prometheus = "0.13"

surrealdb = { workspace = true, optional = true }
surrealdb-migrations = { version = "2.2", optional = true }
include_dir = { version = "0.7", optional = true }

aws-sdk-s3 = { workspace = true, optional = true }

actix-web = { workspace = true, optional = true }
actix-contrib-logger = { version = "0.1", optional = true }
tracing-actix-web = { version = "0.7", default-features = false, features = [
    "opentelemetry_0_29",
    "uuid_v7",
], optional = true }
actix-web-prom = { version = "0.9", features = ["process"], optional = true }
