[package]
name = "utils"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[features]
surrealdb = [
    "dep:mobc-surrealdb", 
    "dep:surrealdb", 
    "dep:surrealdb-migrations", 
    "dep:include_dir"
]
s3 = ["dep:aws-sdk-s3"]
actix-web = [
    "dep:actix-web", 
    "dep:actix-contrib-logger", 
    "dep:tracing-actix-web", 
    "dep:actix-web-metrics"
]

[dependencies]
macros.workspace = true

lazy_static = "1.5"

tokio.workspace = true

serde.workspace = true

garde.workspace = true
passwords = "3.1"
regex = "1.11"
url = "2.5"

chrono = { version = "0.4", features = ["serde"] }
ulid.workspace = true

argon2 = { version = "0.5", features = ["std"] }
rand_chacha = "0.3"
jsonwebtoken = "9.3"

opentelemetry.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
    "registry",
    "std",
] }
tracing-opentelemetry = "0.30"
opentelemetry-appender-tracing = { version = "0.29", features = [
    "experimental_metadata_attributes", 
    # "spec_unstable_logs_enabled",
    "experimental_use_tracing_span_context"
] }
opentelemetry_sdk = { version = "0.29", features = [
    "rt-tokio",
    "trace",
    "logs",
    "metrics",
] }
opentelemetry-otlp = { version = "0.29", features = [
    "grpc-tonic",
    "trace",
    "logs",
    "metrics",
] }
opentelemetry-semantic-conventions = { version = "0.29", features = ["semconv_experimental"] }
metrics.workspace = true
metrics-process = "2.4"
tokio-metrics = { version = "0.4", features = ["rt", "metrics-rs-integration"] }
metrics-util = "0.19"
metrics-tracing-context = "0.18"
metrics-exporter-prometheus = "0.17"

mobc.workspace = true
mobc-surrealdb = { git = "https://github.com/NikSneMC/mobc-surrealdb", optional = true }
surrealdb = { workspace = true, optional = true }
surrealdb-migrations = { version = "2.2", optional = true }
include_dir = { workspace = true, optional = true }

aws-sdk-s3 = { workspace = true, optional = true }

actix-web = { workspace = true, optional = true }
actix-contrib-logger = { version = "0.1", optional = true }
tracing-actix-web = { version = "0.7", default-features = false, features = [
    "opentelemetry_0_29",
    "uuid_v7",
], optional = true }
actix-web-metrics = { version = "0.2", optional = true }

[dev-dependencies]
rstest.workspace = true

[lints]
workspace = true

