[package]
name = "minizord-infrastructure-persistence"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
postgres = ["dep:postgres"]

[dependencies]
postgres = { path = "./postgres", package = "minizord-infrastructure-persistence-postgres", optional = true }

[lints]
workspace = true
