[package]
name = "minizord-infrastructure-services"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
hasher = ["dep:hasher"]
hasher-argon2 = ["hasher/argon2"]

token = ["dep:token"]
token-jwt = ["token/jwt"]

[dependencies]
hasher = { path = "./hasher", package = "minizord-infrastructure-services-hasher", optional = true }
token = { path = "./token", package = "minizord-infrastructure-services-token", optional = true }

[lints]
workspace = true
