[package]
name = "dto"
version = "0.1.0"
edition = "2024"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]

[features]
default = ["surrealdb"]
surrealdb = ["repository/surrealdb"]

[dependencies]
macros.workspace = true
utils.workspace = true
repository = { path = "../repository", default-features = false }

serde.workspace = true
validator.workspace = true

ulid.workspace = true

tracing.workspace = true 

utoipa.workspace = true
