[package]
name = "dto"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[features]
surrealdb = ["repository/surrealdb"]

[dependencies]
macros.workspace = true
utils.workspace = true
repository = { path = "../repository" }

serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

validator.workspace = true

chrono.workspace = true
ulid.workspace = true

bytes.workspace = true

tracing.workspace = true

utoipa.workspace = true
