[package]
name = "api-dto"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[lib]
name = "dto"
path = "./src/lib.rs"

[features]
surrealdb = ["api-entity/surrealdb"]

[dependencies]
macros.workspace = true
utils.workspace = true

api-entity = { path = "../entity" }

serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

garde.workspace = true

chrono.workspace = true
ulid.workspace = true

bytes.workspace = true

tracing.workspace = true

utoipa.workspace = true

[lints]
workspace = true
