[package]
name = "api-entity"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[lib]
name = "entity"
path = "./src/lib.rs"

[features]
surrealdb = ["dep:surrealdb"]
s3 = []

[dependencies]
macros.workspace = true

serde.workspace = true
strum_macros.workspace = true

chrono.workspace = true
ulid.workspace = true

bytes.workspace = true

tracing.workspace = true

surrealdb = { workspace = true, optional = true }

[lints]
workspace = true
