[package]
name = "api-handler"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[lib]
name = "handler"
path = "./src/lib.rs"

[features]
actix-web = [
    "macros/actix-web", 
    "dep:utoipa-actix-web",
    "dep:actix-web", 
    "dep:actix-web-lab", 
    "dep:actix-web-validation", 
    "dep:actix-multipart"
]

[dependencies]
macros.workspace = true
utils.workspace = true

api-dto = { path = "../dto" }
api-service = { path = "../service" }

thiserror.workspace = true

serde.workspace = true
serde_json.workspace = true

ulid.workspace = true

tracing.workspace = true

utoipa.workspace = true
utoipa-actix-web = { workspace = true, optional = true }

actix-web = { workspace = true, optional = true }
actix-web-lab = { workspace = true, optional = true }
actix-web-validation = { workspace = true, optional = true }
actix-multipart = { workspace = true, optional = true }

[build-dependencies]
chrono.workspace = true
iana-time-zone = "0.1"

[lints]
workspace = true
