[package]
name = "repository"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[features]
surrealdb = ["dep:surrealdb", "macros/surrealdb", "utils/surrealdb"]
s3 = ["dep:aws-sdk-s3", "utils/s3"]

[dependencies]
macros.workspace = true
utils.workspace = true

thiserror.workspace = true
#log.workspace = true

serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

chrono.workspace = true
ulid.workspace = true

bytes.workspace = true

tracing.workspace = true

surrealdb = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
