[package]
name = "api-repository"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[lib]
name = "repository"
path = "./src/lib.rs"

[features]
surrealdb = ["dep:surrealdb", "api-entity/surrealdb", "macros/surrealdb", "utils/surrealdb"]
s3 = ["dep:aws-sdk-s3", "api-entity/s3", "utils/s3"]

[dependencies]
macros.workspace = true
utils.workspace = true

api-entity = { path = "../entity" }

thiserror.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true

mobc.workspace = true
surrealdb = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }

[lints]
workspace = true
