[package]
name = "api-repository"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[lib]
name = "repository"
path = "./src/lib.rs"

[dependencies]
macros.workspace = true
utils.workspace = true

api-entity = { path = "../entity" }

thiserror.workspace = true

serde.workspace = true
serde_json.workspace = true

tracing.workspace = true

mobc.workspace = true
surrealdb.workspace = true
aws-sdk-s3.workspace = true

[lints]
workspace = true
