[package]
name = "service"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[features]
default = ["surrealdb", "s3"]
surrealdb = ["repository/surrealdb"]
s3 = ["repository/s3"]

[dependencies]
macros.workspace = true
utils.workspace = true
dto.workspace = true

repository = { path = "../repository", default-features = false }

thiserror.workspace = true

ulid.workspace = true

bytes.workspace = true

tokio.workspace = true

tracing.workspace = true

actix-multipart.workspace = true
