[package]
name = "service"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[features]
surrealdb = ["repository/surrealdb"]
s3 = ["repository/s3"]

[dependencies]
macros.workspace = true
utils.workspace = true
dto.workspace = true

repository = { path = "../repository" }

thiserror.workspace = true

ulid.workspace = true

bytes.workspace = true

tokio.workspace = true

tracing.workspace = true

actix-multipart.workspace = true
