[package]
name = "api-service"
version = "0.1.0"
authors = ["Kirill Udaltsov <commits@udaltsovk.ru>"]
license.workspace = true
edition.workspace = true

[lib]
name = "service"
path = "./src/lib.rs"

[features]
surrealdb = ["api-repository/surrealdb"]
s3 = ["api-repository/s3"]

[dependencies]
macros.workspace = true
utils.workspace = true

api-entity = { path = "../entity" }
api-repository = { path = "../repository" }
api-dto = { path = "../dto" }

thiserror.workspace = true

ulid.workspace = true

bytes.workspace = true

tokio.workspace = true

tracing.workspace = true
metrics.workspace = true

actix-multipart.workspace = true

[lints]
workspace = true

