[package]
name = "minizord-infrastructure-persistence-surreal"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["infrastructure-persistence"] }
domain = { path = "../../../domain", package = "minizord-domain" }
application = { path = "../../../application", package = "minizord-application" }

async-trait.workspace = true
derive-where.workspace = true
include_dir.workspace = true
serde.workspace = true
tap.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

mobc = "0.8"
mobc-surrealdb = { git = "https://github.com/NikSneMC/mobc-surrealdb" }
pastey = "0.1"
serde_json = "1.0"
surrealdb = "2.3"
surrealdb-migrations = "2.2"


[lints]
workspace = true
