[package]
name = "minizord-presentation-api-rest"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["presentation-api-rest"] }
domain = { path = "../../../domain", package = "minizord-domain" }
application = { path = "../../../application", package = "minizord-application" }

axum = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
tap.workspace = true
thiserror.workspace = true
tracing.workspace = true
utoipa = { workspace = true, features = [
  "axum_extras",
  "preserve_order",
  "preserve_path_order",
  "non_strict_integers",
  "uuid",
  "chrono",
] }
utoipa-axum.workspace = true
uuid = { workspace = true, features = ["serde"] }

[lints]
workspace = true
