[package]
name = "minizord-infrastructure-services-token-jwt"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true }
domain = { path = "../../../../domain", package = "minizord-domain" }
application = { path = "../../../../application", package = "minizord-application" }

chrono.workspace = true
serde = { workspace = true, features = ["derive"] }
tap.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

jsonwebtoken = "9.3"

[lints]
workspace = true
